
load(
    "//nlib:build_config/configure.bzl",
    "NLIB_DEFAULT_COPTS",
    "NLIB_DEFAULT_LINKOPTS",
    "NLIB_EXCEPTIONS_FLAG",
    "NLIB_EXCEPTIONS_FLAG_LINKOPTS",
    "NLIB_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "lru_cache",
    hdrs = ["lru.h"],
    copts = NLIB_DEFAULT_COPTS,
    linkopts = NLIB_DEFAULT_LINKOPTS,
    deps = [
    ],
)
