
load(
    "//nlib:build_config/configure.bzl",
    "NLIB_DEFAULT_COPTS",
    "NLIB_DEFAULT_LINKOPTS",
    "NLIB_EXCEPTIONS_FLAG",
    "NLIB_EXCEPTIONS_FLAG_LINKOPTS",
    "NLIB_TEST_COPTS",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "lru_cache",
    hdrs = ["lru.h"],
    copts = NLIB_DEFAULT_COPTS,
    linkopts = NLIB_DEFAULT_LINKOPTS,
    deps = [
    ],
)

cc_test(
    name = "lru_test",
    srcs = ["internal/lru_test.cc"],
    copts = NLIB_TEST_COPTS,
    linkopts = NLIB_DEFAULT_LINKOPTS,
    deps = [
        ":lru_cache",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "interval_map",
    hdrs = ["interval_map.h"],
    copts = NLIB_DEFAULT_COPTS,
    linkopts = NLIB_DEFAULT_LINKOPTS,
    deps = [
    ],
)